04-Kubernetes-Fundamentals-with-YAML/04-05-Services-with-YAML/kube-manifests/01-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-restapp-getip
  labels:
    app: backend-restapp-getip
    tier: backend 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-restapp-getip
  template:
    metadata:
      labels:
        app: backend-restapp-getip
        tier: backend 
    spec: 
      containers:
        - name: backend-restapp-getip
          image: sutirthabagchi21/helloworld:v2-release
          ports:
            - containerPort: 8080
