04-Kubernetes-Fundamentals-with-YAML/04-05-Services-with-YAML/kube-manifests/03-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-nginxapp-getip
  labels:
    app: frontend-nginxapp-getip
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nginxapp-getip
  template: 
    metadata:
      labels: 
        app: frontend-nginxapp-getip
        tier: frontend
    spec: 
      containers: 
        - name: frontend-nginxapp-getip
          image: sutirthabagchi21/kube-frontend-nginx:v1-release
          ports:
            - containerPort: 80
