04-Kubernetes-Fundamentals-with-YAML/04-05-Services-with-YAML/kube-manifests/02-backend-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service ## VERY VERY IMPORTANT - NGINX PROXYPASS needs this name
  labels:
    app: backend-restapp-getip
    tier: backend   
spec:
  #type: ClusterIP is a default service in k8s
  selector:
    app: backend-restapp-getip
  ports:
    - name: http
      port: 8080 # ClusterIP Service Port
      targetPort: 8080 # Container Port
