04-Kubernetes-Fundamentals-with-YAML/04-05-Services-with-YAML/kube-manifests/04-frontend-LoadBalancer-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: frontend-nginxapp-getip-loadbalancer-service
  labels:
    app: frontend-nginxapp-getip
    tier: frontend  
spec:
  type: LoadBalancer # ClusterIp, # NodePort
  selector:
    app: frontend-nginxapp-getip
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
