04-Kubernetes-Fundamentals-with-YAML/04-05-Services-with-YAML/kube-manifests/05-agic-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-restapp-getip
  labels:
    app: backend-restapp-getip
    tier: backend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-restapp-getip
  template:
    metadata:
      labels:
        app: backend-restapp-getip
        tier: backend 
    spec: 
      containers:
        - name: backend-restapp-getip
          image: sutirthabagchi21/helloworld:v2-release
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service ## VERY VERY IMPORTANT - NGINX PROXYPASS needs this name
spec:
  #type: ClusterIP is a default service in k8s
  selector:
    app: backend-restapp-getip
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-nginxapp-getip
  labels:
    app: frontend-nginxapp-getip
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nginxapp-getip
  template: 
    metadata:
      labels: 
        app: frontend-nginxapp-getip
        tier: frontend
    spec: 
      containers: 
        - name: frontend-nginxapp-getip
          image: sutirthabagchi21/kube-frontend-nginx:v1-release
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service 
metadata:
  name: frontend-nginxapp-getip-service
  labels:
    app: frontend-nginxapp-getip
    tier: frontend  
spec:
  selector:
    app: frontend-nginxapp-getip
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp-getip-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: frontend-nginxapp-getip-service
            port:
              number: 80
        pathType: Exact
